refactor(back): create explicit types for list responses
